--- a/src/app/pages/work-order-status/work-order-status.component.html
+++ b/src/app/pages/work-order-status/work-order-status.component.html
@@ -7,7 +7,7 @@
         <div class="card-header card-header-info d-flex justify-content-between align-items-center">
           <div>
             <h4 class="card-title">Work Order Status</h4>
-            <p class="card-category">Dữ liệu được làm mới mỗi 30 giây.</p>
+            <p class="card-category">Dữ liệu được tải từ Google Sheet.</p>
           </div>
           <button class="btn btn-white" (click)="showSheetForEditing()">
             <i class="material-icons" style="margin-right: 4px;">edit</i>
