--- a/src/app/pages/work-order-status/work-order-status.component.html
+++ b/src/app/pages/work-order-status/work-order-status.component.html
@@ -1,13 +1,1 @@
-<div class="main-content">
-  <div class="container-fluid">
-    <div class="card">
-      <div class="card-header card-header-info">
-        <h4 class="card-title mb-0">Work Order Status</h4>
-        <p class="card-category">Chỉnh sửa trực tiếp trên Google Sheet.</p>
-      </div>
-      <div class="card-body" *ngIf="embeddedSheetUrl">
-        <iframe [src]="embeddedSheetUrl" width="100%" height="75vh" frameborder="0">Đang tải...</iframe>
-      </div>
-    </div>
-  </div>
-</div>
+<iframe *ngIf="embeddedSheetUrl" [src]="embeddedSheetUrl" class="work-order-iframe"></iframe>
