--- a/src/app/pages/work-order-status/work-order-status.component.scss
+++ b/src/app/pages/work-order-status/work-order-status.component.scss
@@ -132,3 +132,19 @@ select {
 .wo-table button:hover {
   background: #155f9e;
 }
+
+:host {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
+:host ::ng-deep .main-panel > .main-content {
+  padding: 0 !important;
+}
+
+.work-order-iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
