--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -380,6 +380,12 @@
         min-height: calc(100vh - 123px);
     }
 
+    &.main-content-no-padding .main-content {
+      padding: 0;
+      margin-top: 60px;
+      min-height: calc(100vh - 73px);
+    }
+
      .footer{
         border-top: 1px solid #e7e7e7;
     }
