--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -10,22 +10,16 @@
   z-index: 4;
 }
 .logo-img img {
-  width: 60px;
-  height: 60px;
+  width: 78px;
+  height: 78px;
   object-fit: contain;
-  margin-bottom: 5px;
 }
 
 .logo a.logo-mini {
   opacity: 1 !important;
   float: none;
-  font-size: 1.1em;
-  font-weight: normal;
-  color: #3C4858;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
+  text-align: center;
+  display: block;
 }
 
 .nav {
