--- a/src/app/pages/work-order-status/work-order-status.component.scss
+++ b/src/app/pages/work-order-status/work-order-status.component.scss
@@ -1,11 +1,9 @@
 :host {
   display: block;
-  height: 100%;
-  width: 100%;
 }
 
 .work-order-iframe {
   width: 100%;
-  height: 100%;
+  height: 80vh;
   border: none;
 }
