--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -371,7 +371,7 @@
 .main-panel{
     position: relative;
     float: right;
-    width: $sidebar-width;
+    width: calc(100% - #{$sidebar-width});
     @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
      .main-content{
