--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -14,6 +14,9 @@
     background: $white-color;
     @include shadow-big();
 
+    display: flex;
+    flex-direction: column;
+
     .caret{
       display: inline-block;
       width: 0;
@@ -44,7 +47,8 @@
     }
     .sidebar-wrapper{
         position: relative;
-        height: calc(100vh - 75px);
+        flex: 1;
+        min-height: 0;
         overflow: auto;
         width: 260px;
         z-index: 4;
@@ -371,7 +375,7 @@
 .main-panel{
     position: relative;
     float: right;
-    width: calc(100% - #{$sidebar-width});
+    width: $sidebar-width;
     @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
      .main-content{
