--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -10,16 +10,16 @@
   z-index: 4;
 }
 .logo-img img {
-  width: 78px;
-  height: 78px;
+  width: 35px;
+  height: 35px;
   object-fit: contain;
+  margin-bottom: 5px;
 }
 
 .logo a.logo-mini {
   opacity: 1 !important;
   float: none;
   text-align: center;
-  display: block;
 }
 
 .nav {
