--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,6 +3,7 @@
     <div class="logo-img">
       <img src="/assets/img/logo.png" />
     </div>
+    AIRSPEED VN
   </a>
 </div>
 <div class="sidebar-wrapper">
