--- a/src/app/pages/work-order-status/work-order-status.component.scss
+++ b/src/app/pages/work-order-status/work-order-status.component.scss
@@ -1,9 +1,10 @@
 :host {
   display: block;
+  height: 100%;
 }
 
 .work-order-iframe {
   width: 100%;
-  height: 80vh;
+  height: 100%;
   border: none;
 }
