--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -5,8 +5,10 @@
     </div>
     <div class="main-panel">
         <app-navbar></app-navbar>
-        <router-outlet></router-outlet>
-        <div *ngIf="isMaps('/maps')">
+        <div class="content-area">
+            <router-outlet></router-outlet>
+        </div>
+        <div class="footer-wrapper" *ngIf="isMaps('/maps')">
             <app-footer></app-footer>
         </div>
     </div>
