--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -4,11 +4,11 @@
         <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
     </div>
     <div class="main-panel">
-        <app-navbar *ngIf="shouldShowNavbar"></app-navbar>
+        <app-navbar *ngIf="shouldShowNavbar()"></app-navbar>
         <div class="content-area">
             <router-outlet></router-outlet>
         </div>
-        <div class="footer-wrapper" *ngIf="isMaps('/maps')">
+        <div class="footer-wrapper" *ngIf="shouldShowFooter()">
             <app-footer></app-footer>
         </div>
     </div>
