--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,33 +1,21 @@
 <div class="main-content">
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card">
-          <div class="card-header card-header-info">
-            <h4 class="card-title">Warehouse Layout</h4>
-            <p class="card-category">Find item location in the warehouse</p>
-          </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-md-6">
-                <mat-form-field class="example-full-width">
-                  <input matInput #searchInput placeholder="Enter Item Code to find" (keyup.enter)="search(searchInput.value)">
-                </mat-form-field>
-              </div>
-              <div class="col-md-6">
-                <button mat-raised-button type="submit" class="btn btn-info pull-right" (click)="search(searchInput.value)">Search</button>
-              </div>
-            </div>
-            
-            <h5 *ngIf="searchMessage" [innerHTML]="searchMessage"></h5>
-
-            <!-- Container for the SVG Layout -->
-            <div class="svg-container" #svgContainer [innerHTML]="svgContent">
-            </div>
-
-          </div>
+    <div class="search-controls">
+      <div class="row">
+        <div class="col-md-6">
+          <mat-form-field class="example-full-width">
+            <input matInput #searchInput placeholder="Enter Item Code to find" (keyup.enter)="search(searchInput.value)">
+          </mat-form-field>
+        </div>
+        <div class="col-md-6">
+          <button mat-raised-button type="submit" class="btn btn-info pull-right" (click)="search(searchInput.value)">Search</button>
         </div>
       </div>
+      <h5 *ngIf="searchMessage" [innerHTML]="searchMessage"></h5>
+    </div>
+    
+    <!-- Container for the SVG Layout -->
+    <div class="svg-container" #svgContainer [innerHTML]="svgContent">
     </div>
   </div>
 </div>
