--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -2,19 +2,13 @@
   <div class="container-fluid">
 
     <!-- Document List View -->
-    <div *ngIf="!selectedDocumentUrl" class="card">
-      <div class="card-header card-header-info">
-        <h4 class="card-title">Danh sách tài liệu</h4>
-        <p class="card-category">Chọn một tài liệu để mở và điền thông tin.</p>
-      </div>
-      <div class="card-body">
-        <div class="row">
-          <div *ngFor="let doc of documentList" class="col-md-4">
-            <div class="card">
-              <div class="card-body text-center">
-                <h5 class="card-title">{{ doc.title }}</h5>
-                <button (click)="selectDocument(doc)" class="btn btn-info">Mở tài liệu</button>
-              </div>
+    <div *ngIf="!selectedDocumentUrl">
+      <div class="row">
+        <div *ngFor="let doc of documentList" class="col-md-4">
+          <div class="card">
+            <div class="card-body text-center">
+              <h5 class="card-title">{{ doc.title }}</h5>
+              <button (click)="selectDocument(doc)" class="btn btn-info">Mở tài liệu</button>
             </div>
           </div>
         </div>
@@ -22,18 +16,15 @@
     </div>
 
     <!-- Embedded Document View -->
-    <div *ngIf="selectedDocumentUrl" class="card">
-      <div class="card-header card-header-info d-flex align-items-center">
+    <div *ngIf="selectedDocumentUrl" class="embedded-view">
+      <div class="toolbar">
         <button (click)="closeDocument()" class="btn btn-white btn-round btn-just-icon mr-3">
           <i class="material-icons">arrow_back</i>
         </button>
-        <div>
-          <h4 class="card-title mb-0">Điền thông tin</h4>
-          <p class="card-category">Hoàn thành biểu mẫu và nhấn nút quay lại.</p>
-        </div>
+        <span>Hoàn thành biểu mẫu và nhấn nút quay lại.</span>
       </div>
-      <div class="card-body">
-        <iframe [src]="selectedDocumentUrl" width="100%" height="650px" frameborder="0">Đang tải...</iframe>
+      <div class="iframe-container">
+        <iframe [src]="selectedDocumentUrl" width="100%" height="100%" frameborder="0">Đang tải...</iframe>
       </div>
     </div>
 
