--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -10,8 +10,8 @@
   z-index: 4;
 }
 .logo-img img {
-  width: 53px;
-  height: 53px;
+  width: 70px;
+  height: 70px;
   object-fit: contain;
   margin-bottom: 5px;
 }
@@ -23,6 +23,7 @@
 }
 
 .nav {
+  padding-top: 25px;
   list-style: none;
   margin: 0;
   padding: 0;
