--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -5,13 +5,21 @@
 .logo {
   padding: 20px 0px;
   margin: 0;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: relative;
   z-index: 4;
 }
+.logo-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .logo-img img {
-  width: 133px;
-  height: 133px;
+  width: 100px;
+  height: 100px;
   object-fit: contain;
   display: block;
   margin: 0 auto 5px auto;
