--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -34,7 +34,11 @@
 .nav {
   list-style: none;
   margin: 0;
-  padding: 50px 0 0 0;
+  padding: 0;
+}
+
+.sidebar-wrapper > .nav > li:first-child {
+  margin-top: 50px;
 }
 
 .nav > li {
