--- a/src/app/pages/documents/documents.component.scss
+++ b/src/app/pages/documents/documents.component.scss
@@ -17,3 +17,13 @@
     display: flex;
     align-items: center;
 }
+
+.checklist-row {
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.checklist-card {
+    flex: 0 1 auto; /* Don't grow, don't shrink, base size is auto */
+    min-width: 200px; /* Give it a minimum width */
+}
