--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,5 +1,5 @@
 .sidebar-wrapper {
-  padding: 10px 0 12px 0;
+  padding: 40px 0 12px 0;
 }
 
 .logo {
@@ -125,4 +125,8 @@
 .sub-menu li > a.active .material-icons,
 .sub-menu li > a:hover .material-icons {
   color: #1976d2;
+}
+.logo {
+  margin-top: 0;      /* Sát trên cùng */
+  padding-top: 0;     /* Hoặc số nhỏ */
 }
