--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -27,7 +27,7 @@
         <div class="copyright pull-right">
             &copy;
             {{test | date: 'yyyy'}}, made with love by
-            <a href="https://www.airspeedllc.com/" target="_blank">AIRSPEED WAREHOUSE</a> for a better web.
+            <a href="https://www.airspeedllc.com/" target="_blank">VN TEAM</a> for a better web.
         </div>
     </div>
 </footer>
