--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,19 +29,16 @@
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" (click)="resetNotificationCount()">
                         <i class="material-icons">notifications</i>
-                        <span class="notification">5</span>
+                        <span class="notification" *ngIf="notificationCount > 0">{{ notificationCount }}</span>
                         <p>
                             <span class="d-lg-none d-md-block">Some Actions</span>
                         </p>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="javascript:void(0)">Mike John responded to your email</a>
-                        <a class="dropdown-item" href="javascript:void(0)">You have 5 new tasks</a>
-                        <a class="dropdown-item" href="javascript:void(0)">You're now friend with Andrew</a>
-                        <a class="dropdown-item" href="javascript:void(0)">Another Notification</a>
-                        <a class="dropdown-item" href="javascript:void(0)">Another One</a>
+                        <a class="dropdown-item" href="javascript:void(0)" *ngIf="notificationCount > 0">Có {{ notificationCount }} cập nhật nhiệt độ, độ ẩm mới</a>
+                        <a class="dropdown-item" href="javascript:void(0)" *ngIf="notificationCount === 0">Không có thông báo mới</a>
                     </div>
                 </li>
                 <li class="nav-item">
