--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,13 +1,16 @@
 <div class="main-content">
   <div class="container-fluid">
     <div class="card">
-      <div class="card-header card-header-warning">
-        <h4 class="card-title">Tài liệu Vận chuyển</h4>
-        <p class="card-category">Dữ liệu được cập nhật từ biểu mẫu Log.</p>
+      <div class="card-header card-header-info">
+        <h4 class="card-title">Thông báo</h4>
+        <p class="card-category">Các thông báo và cập nhật mới nhất.</p>
       </div>
       <div class="card-body">
-        <div class="iframe-container" style="height: 80vh;">
-          <iframe [src]="documentUrl" width="100%" height="100%" frameborder="0">Đang tải...</iframe>
+        <div class="row">
+          <div class="col-md-12">
+            <!-- Nội dung thông báo sẽ được thêm ở đây -->
+            <p>Hiện chưa có thông báo nào.</p>
+          </div>
         </div>
       </div>
     </div>
