--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -2,14 +2,13 @@
   <div class="container-fluid">
     <div class="card">
       <div class="card-header card-header-info">
-        <h4 class="card-title">Thông báo</h4>
-        <p class="card-category">Các thông báo và cập nhật mới nhất.</p>
+        <h4 class="card-title">Schedules</h4>
+        <p class="card-category">View and manage schedules.</p>
       </div>
       <div class="card-body">
         <div class="row">
           <div class="col-md-12">
-            <!-- Nội dung thông báo sẽ được thêm ở đây -->
-            <p>Hiện chưa có thông báo nào.</p>
+            <p>Content for schedules will be added here.</p>
           </div>
         </div>
       </div>
