--- a/src/app/pages/work-order-status/work-order-status.component.scss
+++ b/src/app/pages/work-order-status/work-order-status.component.scss
@@ -8,3 +8,24 @@
   height: 100%;
   border: none;
 }
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.main-content {
+  height: 100vh; /* Chiếm toàn bộ chiều cao trình duyệt */
+  display: flex;
+  flex-direction: column;
+}
+.container-fluid {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.card-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
